Set Up themes, colors, build logic and core module

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+nytimes.api.base.url = "https://api.nytimes.com/svc/mostpopular/v2/"
+nytimes.api.key = "NVkn3iHV4Ff6hiPBmdKAJffCEVAMESym"
