--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".NyTimesApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,15 +13,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NyTimesSample"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name="com.sami.features.splash.presentation.ui.SplashActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.sami.features.main.presentation.ui.MainActivity"
+            android:exported="true"/>
+
+        <activity
+            android:name="com.sami.features.auth.base.presentation.ui.AuthenticationActivity"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
