finish working on authentication feature

--- a/sub_project.gradle
+++ b/sub_project.gradle
@@ -1,7 +1,8 @@
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-parcelize"
 apply plugin: "kotlin-kapt"
-apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: "dagger.hilt.android.plugin"
+apply plugin: "org.jetbrains.kotlin.plugin.serialization"
 
 android {
     compileSdk 34
