--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -5,11 +5,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     //Dependency injection
-    implementation "com.google.dagger:dagger:2.42"
-    implementation "com.google.dagger:hilt-android:2.42"
+    implementation "com.google.dagger:dagger:2.44"
+    implementation "com.google.dagger:hilt-android:2.44"
     implementation 'androidx.hilt:hilt-work:1.0.0'
-    kapt "com.google.dagger:dagger-compiler:2.42"
-    kapt "com.google.dagger:hilt-compiler:2.42"
+    kapt "com.google.dagger:dagger-compiler:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
 
     //Navigation
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.0'
@@ -31,4 +31,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //Data Store
+    implementation("androidx.datastore:datastore:1.0.0")
+    implementation("org.jetbrains.kotlin:kotlin-serialization:1.8.20")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1")
+    implementation("org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5")
 }
