--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include ':freatures:main'
 include ':freatures:auth:login'
 include ':freatures:auth:register'
 include ':freatures:auth:base'
+include ':freatures:more'
