--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation 'com.serjltt.moshi:moshi-lazy-adapters:2.2'
     implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    implementation 'com.localebro:okhttpprofiler:1.0.8'
 
     // Lifecycle + ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
@@ -37,4 +38,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-serialization:1.8.20")
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1")
     implementation("org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5")
+
+    //Swipe to Refresh
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
 }
