--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include ':freatures:auth:login'
 include ':freatures:auth:register'
 include ':freatures:auth:base'
 include ':freatures:more'
+include ':freatures:dashboard'
