--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:name=".NyTimesApplication"
         android:allowBackup="true"
@@ -12,6 +15,7 @@
         android:roundIcon="@mipmap/ny_times_app_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NyTimesSample"
+        android:localeConfig="@xml/locales_config"
         tools:targetApi="31">
 
         <activity
@@ -32,6 +36,16 @@
         <activity
             android:name="com.sami.features.auth.base.presentation.ui.AuthenticationActivity"
             android:exported="true"/>
+
+        <!--Support Pre-app Language-->
+        <service
+            android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
+            android:enabled="false"
+            android:exported="false">
+            <meta-data
+                android:name="autoStoreLocales"
+                android:value="true" />
+        </service>
 
     </application>
 
