--- a/sub_project.gradle
+++ b/sub_project.gradle
@@ -21,6 +21,10 @@ android {
         buildConfigField("String", "NY_TIMES_API_KEY", getProperty("nytimes.api.key"))
     }
 
+//    androidResources {
+//        generateLocaleConfig true
+//    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
