--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,6 +3,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.work:work-runtime:2.8.1'
 
     //Dependency injection
     implementation "com.google.dagger:dagger:2.44"
