--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -31,6 +31,8 @@ dependencies {
 
     //Testing
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito:mockito-core:5.3.1"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
